--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -56,13 +56,13 @@
     </p>
     <ol>
         <li>
-            <a target=blank href="https://hu.wikipedia.org/wiki/Z%C3%B6ld_levelib%C3%A9ka"><img wirth=640 height=400
+            <a target=blank href="https://hu.wikipedia.org/wiki/Z%C3%B6ld_levelib%C3%A9ka"><img width=640 height=400
                     src="kicsibeka1.jpg" alt="kicsi1"></a>
 
         </li>
         <li>
-            <a target=blank href="https://hu.wikipedia.org/wiki/Mocs%C3%A1ri_b%C3%A9ka"><img wirth=640 height=400
-                    src="kicsibeka02.jpg" alt="kicsi2"></a>
+            <a target=blank href="https://hu.wikipedia.org/wiki/Mocs%C3%A1ri_b%C3%A9ka"><img width=640 height=400
+                    src="kicsibeka2.jpg" alt="kicsi2"></a>
 
         </li>
     </ol>
@@ -72,12 +72,12 @@
     <ol>
         <li>
             <a target=blank href="https://hu.wikipedia.org/wiki/Ny%C3%ADlm%C3%A9regb%C3%A9kaf%C3%A9l%C3%A9k"><img
-                    wirth=640 height=400 src="nyilmereg.jpg" alt="nagy1"></a>
+                    width=640 height=400 src="nyilmereg.jpg" alt="nagy1"></a>
 
         </li>
         <li>
             <a target=blank href="https://hu.wikipedia.org/wiki/V%C3%B6r%C3%B6sszem%C5%B1_levelib%C3%A9ka"><img
-                    wirth=640 height=400 src="leveli.jpg" alt="nagy1"></a>
+                    width=640 height=400 src="leveli.jpg" alt="nagy1"></a>
 
         </li>
     </ol>
