--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -8,9 +8,9 @@
 </hear>
 
 <body>
-    <a href="http://127.0.0.1:5500/allatokbogyonak.html">Kezdőlap</a>
-    <a href="http://127.0.0.1:5500/allatokbogyonak/allatok/beka.html">Békák</a>
-    <a href="http://127.0.0.1:5500/allatokbogyonak/allatok/panda.html">Pandák</a>
+    <a href="/allatokbogyonak.html">Kezdőlap</a>
+    <a href="/allatokbogyonak/allatok/beka.html">Békák</a>
+    <a href="/allatokbogyonak/allatok/panda.html">Pandák</a>
     <h1>Itt békákat fogsz találni a későbbiekben</h1>
     Ha 4K vireókat szeretnél látni békákról kattints <a target=blank href="https://www.youtube.com/watch?v=IFqur0_e87c">
         <em>IDE</em>
