--- a/allatokbogyonak/allatok/panda.html
+++ b/allatokbogyonak/allatok/panda.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <a href="http://127.0.0.1:5500/allatokbogyonak.html">Kezdőlap</a>
-    <a href="http://127.0.0.1:5500/allatokbogyonak/allatok/beka.html">Békák</a>
-    <a href="http://127.0.0.1:5500/allatokbogyonak/allatok/panda.html">Pandák</a>
+    <a href="/allatokbogyonak.html">Kezdőlap</a>
+    <a href="/allatokbogyonak/allatok/beka.html">Békák</a>
+    <a href="/allatokbogyonak/allatok/panda.html">Pandák</a>
     <h1>Itt pandákat fogsz találni a későbbiekben</h1>
 
 
