kezdolap url fix

--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -8,7 +8,7 @@
 </hear>
 
 <body>
-    <a href="/allatokbogyonak.html">Kezdőlap</a>
+    <a href="/index.html">Kezdőlap</a>
     <a href="/allatokbogyonak/allatok/beka.html">Békák</a>
     <a href="/allatokbogyonak/allatok/panda.html">Pandák</a>
     <h1>Itt békákat fogsz találni a későbbiekben</h1>
