--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -1,44 +1,42 @@
-<!rOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+    <html lang="en">
 
-<hear>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="wirth=revice-wirth, initial-scale=1.0">
-    <title>Békakirályság</title>
-</hear>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="wirth=revice-wirth, initial-scale=1.0">
+        <title>Békakirályság</title>
 
-<body>
-    <a href="/index.html">Kezdőlap</a>
-    <a href="/allatokbogyonak/allatok/beka.html">Békák</a>
-    <a href="/allatokbogyonak/allatok/panda.html">Pandák</a>
-    <h1>Itt békákat fogsz találni a későbbiekben</h1>
-    Ha 4K vireókat szeretnél látni békákról kattints <a target=blank href="https://www.youtube.com/watch?v=IFqur0_e87c">
-        <em>IDE</em>
-    </a>
-    <h2>A képre kattintva megturhatsz többet a rajta lévő békáról</h2>
+            </head>
 
-    <table>
+    <body>
+        <a style="color: rgb(55, 3, 243)" href="/index.html">Kezdőlap</a>
+        <a style="color: rgb(26, 219, 42);" href="/allatokbogyonak/allatok/beka.html">Békák</a>
+        <a style="color: rgb(185, 184, 168)" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
+        <h1 style="color: rgb(185, 208, 42);"> Itt békákat fogsz találni a későbbiekben</h1>
+        <em>Ha 4K videókat szeretnél látni békákról kattints <a target=blank
+                href="https://www.youtube.com/watch?v=IFqur0_e87c">
+                <em>IDE</em></em>
+        </a>
+        <h2>A képre kattintva megtudhatsz többet a rajta lévő békáról</h2>
 
-<caption>Békák veszélyesség szerint</caption>
+        <table>
 
-        <tr>
-            <td>Piros</td>
-            <td>Veszélyes</td>
-        </tr>
-        <tr>
-            <td>Narancssárga</td>
-            <td>Kevésbé veszélyes</td>
-        </tr>
-        <tr>
-            <td>Zöld</td>
-            <td>Ártalmatlan</td>
-        </tr>
+            <caption>
+                <h3>Békák veszélyesség szerint</h3>
+            </caption>
 
-
-
-
-
-
+            <tr>
+                <td>Piros</td>
+                <td>Veszélyes</td>
+            </tr>
+            <tr>
+                <td>Narancssárga</td>
+                <td>Kevésbé veszélyes</td>
+            </tr>
+            <tr>
+                <td>Zöld</td>
+                <td>Ártalmatlan</td>
+            </tr>
 
 
 
@@ -48,39 +46,45 @@
 
 
 
-    </table>
 
 
-    <p>
-    <h3>Otthon tartható békák</h3>
-    </p>
-    <ol>
-        <li>
-            <a target=blank href="https://hu.wikipedia.org/wiki/Z%C3%B6ld_levelib%C3%A9ka"><img width=640 height=400
-                    src="kicsibeka1.jpg" alt="kicsi1"></a>
 
-        </li>
-        <li>
-            <a target=blank href="https://hu.wikipedia.org/wiki/Mocs%C3%A1ri_b%C3%A9ka"><img width=640 height=400
+
+
+
+        </table>
+
+
+        <p>
+        <h3 style="color: rgb(0, 162, 255);">Otthon tartható békák</h3>
+        </p>
+
+
+        <a target=blank href="https://hu.wikipedia.org/wiki/Z%C3%B6ld_levelib%C3%A9ka"><img width=640 height=400
+                src="kicsibeka1.jpg" alt="kicsi1"></a>
+
+        <p><a target=blank href="https://hu.wikipedia.org/wiki/Mocs%C3%A1ri_b%C3%A9ka"><img width=640 height=400
                     src="kicsibeka2.jpg" alt="kicsi2"></a>
+        </p>
 
-        </li>
-    </ol>
-    <p>
-    <h3>Nem háziasítható békák</h3>
-    </p>
-    <ol>
-        <li>
-            <a target=blank href="https://hu.wikipedia.org/wiki/Ny%C3%ADlm%C3%A9regb%C3%A9kaf%C3%A9l%C3%A9k"><img
-                    width=640 height=400 src="nyilmereg.jpg" alt="nagy1"></a>
 
-        </li>
-        <li>
-            <a target=blank href="https://hu.wikipedia.org/wiki/V%C3%B6r%C3%B6sszem%C5%B1_levelib%C3%A9ka"><img
-                    width=640 height=400 src="leveli.jpg" alt="nagy1"></a>
 
-        </li>
-    </ol>
-</body>
 
-</html>
+        <p>
+        <h3 style="color: rgb(124, 23, 182);">Nem háziasítható békák</h3>
+        </p>
+
+
+        <a target=blank href="https://hu.wikipedia.org/wiki/Ny%C3%ADlm%C3%A9regb%C3%A9kaf%C3%A9l%C3%A9k"><img width=640
+                height=400 src="nyilmereg.jpg" alt="nagy1"></a>
+
+        <p> <a target=blank href="https://hu.wikipedia.org/wiki/V%C3%B6r%C3%B6sszem%C5%B1_levelib%C3%A9ka"><img width=640
+                    height=400 src="leveli.jpg" alt="nagy1"></a>
+        </p>
+
+
+
+
+    </body>
+
+    </html>
