--- a/allatokbogyonak/allatok/panda.html
+++ b/allatokbogyonak/allatok/panda.html
@@ -8,14 +8,15 @@
 </head>
 
 <body>
-    <a href="/index.html">Kezdőlap</a>
-    <a href="/allatokbogyonak/allatok/beka.html">Békák</a>
-    <a href="/allatokbogyonak/allatok/panda.html">Pandák</a>
-    <h1>Itt pandákat fogsz találni a későbbiekben</h1>
+    <a style="color: rgb(55, 3, 243)" href="/index.html">Kezdőlap</a>
+    <a style="color: rgb(26, 219, 42);" href="/allatokbogyonak/allatok/beka.html">Békák</a>
+    <a style="color: rgb(185, 184, 168)" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
+    <h1 style="color: rgb(185, 184, 168)">Itt pandákat fogsz találni a későbbiekben</h1>
 
 
-    <p>Ha cuki pandás videókat szeretnél nézni kattints <a target=blank
-            href="https://www.youtube.com/watch?v=TYM2597Hmgk"><em>IDE</em></a></p>
+    <p>
+        <em>Ha cuki pandás videókat szeretnél nézni kattints <a target=blank
+            href="https://www.youtube.com/watch?v=TYM2597Hmgk"><em>IDE</em></a></em></p>
     <p><h2>A képekre kattintva többet megtudhatsz az adott panda fajtáról</h2></p>
     <p><a target=blank href="https://hu.wikipedia.org/wiki/%C3%93ri%C3%A1spanda"><img src="panda.jpg" alt="panda.jpg">
 
