--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <ul>
         <p>
             <li>
-<a href="allatokbogyonak\allatok\beka.html">Békák</a>
+<a style="color: rgb(26, 219, 42);" href="allatokbogyonak\allatok\beka.html">Békák</a>
         </li>
     </p>
         
         <p>
             <li>
-<a href="allatokbogyonak\allatok\panda.html">Pandák</a>
+<a style="color: rgb(185, 184, 168)" href="allatokbogyonak\allatok\panda.html">Pandák</a>
         </li>
     </p>
     </ul> 
