--- a/allatokbogyonak/allatok/panda.html
+++ b/allatokbogyonak/allatok/panda.html
@@ -5,19 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
+    <style>
+        html {
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 
 <body>
-    <a style="color: rgb(55, 3, 243)" href="/index.html">Kezdőlap</a>
-    <a style="color: rgb(185, 208, 42);" href="/allatokbogyonak/allatok/beka.html">Békák</a>
-    <a style="color: rgb(11, 68, 61)" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
-    <h1 style="color: rgb(11, 68, 61)">Itt pandákat fogsz találni a későbbiekben</h1>
+    <a style="color: rgb(55, 3, 243); font-weight: 700; " href="/index.html">Kezdőlap</a>
+    <a style="color: rgb(185, 208, 42); font-weight: 700;" href="/allatokbogyonak/allatok/beka.html">Békák</a>
+    <a style="color: rgb(210, 68, 61); font-weight: 700;" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
+    <h1 style="color: rgb(210, 68, 61); text-align: center;">Itt pandákat fogsz találni a későbbiekben</h1>
 
 
+
+    <em>Ha cuki pandás videókat szeretnél nézni kattints <a target=blank
+            href="https://www.youtube.com/watch?v=TYM2597Hmgk">IDE</a></em>
     <p>
-        <em>Ha cuki pandás videókat szeretnél nézni kattints <a target=blank
-            href="https://www.youtube.com/watch?v=TYM2597Hmgk"><em>IDE</em></a></em></p>
-    <p><h2>A képekre kattintva többet megtudhatsz az adott panda fajtáról</h2></p>
+    <h2>A képekre kattintva többet megtudhatsz az adott panda fajtáról</h2>
+    </p>
     <p><a target=blank href="https://hu.wikipedia.org/wiki/%C3%93ri%C3%A1spanda"><img src="panda.jpg" alt="panda.jpg">
 
         </a></p>
