--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuki állatok</title>
+    <style>
+        html {
+            font-family: sans-serif;
+        }
+
+        p {
+            line-height: 10px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Üdv az állatnézegetőben</h1>
+    <h1 style="text-align: center;">Üdv az állatnézegetőben!</h1>
     <ul>
         <p>
-            <li>
-<a style="color: rgb(185, 208, 42);" href="allatokbogyonak\allatok\beka.html">Békák</a>
-        </li>
-    </p>
-        
+
+            <a style="color: rgb(185, 208, 42); font-weight: 700 ;" href="allatokbogyonak\allatok\beka.html">Békák</a>
+
+        </p>
+
         <p>
-            <li>
-<a style="color: rgb(11, 68, 61)" href="allatokbogyonak\allatok\panda.html">Pandák</a>
-        </li>
-    </p>
-    </ul> 
+
+            <a style="color: rgb(210, 68, 61); font-weight: 700 ;" href="allatokbogyonak\allatok\panda.html">Pandák</a>
+
+        </p>
+    </ul>
 
 
 
@@ -37,4 +48,5 @@
 
 
 </body>
+
 </html>
