--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -5,17 +5,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="wirth=revice-wirth, initial-scale=1.0">
         <title>Békakirályság</title>
+        <style>
+            html {
+                font-family: sans-serif;
+            }
+        </style>
 
             </head>
 
     <body>
-        <a style="color: rgb(55, 3, 243)" href="/index.html">Kezdőlap</a>
-        <a style="color: rgb(185, 208, 42);" href="/allatokbogyonak/allatok/beka.html">Békák</a>
-        <a style="color: rgb(11, 68, 61)" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
-        <h1 style="color: rgb(185, 208, 42);"> Itt békákat fogsz találni a későbbiekben</h1>
+        <a style="color: rgb(55, 3, 243); font-weight: 700; " href="/index.html">Kezdőlap</a>
+        <a style="color: rgb(185, 208, 42); font-weight: 700;" href="/allatokbogyonak/allatok/beka.html">Békák</a>
+        <a style="color: rgb(210, 68, 61); font-weight: 700;" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
+        <h1 style="color: rgb(185, 208, 42); text-align: center;">Itt békákat fogsz találni a későbbiekben</h1>
         <em>Ha 4K videókat szeretnél látni békákról kattints <a target=blank
                 href="https://www.youtube.com/watch?v=IFqur0_e87c">
-                <em>IDE</em></em>
+                IDE</em>
         </a>
         <h2>A képre kattintva megtudhatsz többet a rajta lévő békáról</h2>
 
@@ -26,16 +31,16 @@
             </caption>
 
             <tr>
-                <td>Piros</td>
-                <td>Veszélyes</td>
+                <td><font color="red">Piros</font></td>
+                <td><font color="red">Veszélyes</font></td>
             </tr>
             <tr>
-                <td>Narancssárga</td>
-                <td>Kevésbé veszélyes</td>
+                <td><font color="orange">Narancssárga</font></td>
+                <td><font color="orange">Kevésbé veszélyes</font></td>
             </tr>
             <tr>
-                <td>Zöld</td>
-                <td>Ártalmatlan</td>
+                <td><font color="ambientgreen">Zöld</font></td>
+                <td><font color="ambientgreen">Ártalmatlan</font></td>
             </tr>
 
 
