--- a/allatokbogyonak/allatok/panda.html
+++ b/allatokbogyonak/allatok/panda.html
@@ -25,7 +25,7 @@
     <p>
     <h2>A képekre kattintva többet megtudhatsz az adott panda fajtáról</h2>
     </p>
-    <p><a target=blank href="https://hu.wikipedia.org/wiki/%C3%93ri%C3%A1spanda"><img src="panda.jpg" alt="panda.jpg">
+    <p><a target=blank href="https://hu.wikipedia.org/wiki/%C3%93ri%C3%A1spanda"><img img width=640 height=400 src="panda.jpg" alt="panda.jpg">
 
         </a></p>
 
