css style upgrade from inline/internal

--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang=en>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="wirth=revice-wirth, initial-scale=1.0">
-        <title>Békakirályság</title>
-        <style>
-            html {
-                font-family: sans-serif;
-            }
-        </style>
+<head>
+    <meta charset=UTF-8>
+    <meta name=viewport content=wirth=revice-wirth, initial-scale=1.0>
+    <title>Békakirályság</title>
+    <link rel=stylesheet type=text/css href=/css/allatstyle.css>
 
-            </head>
+</head>
 
-    <body>
-        <a style="color: rgb(55, 3, 243); font-weight: 700; " href="/index.html">Kezdőlap</a>
-        <a style="color: rgb(185, 208, 42); font-weight: 700;" href="/allatokbogyonak/allatok/beka.html">Békák</a>
-        <a style="color: rgb(210, 68, 61); font-weight: 700;" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
-        <h1 style="color: rgb(185, 208, 42); text-align: center;">Itt békákat fogsz találni a későbbiekben</h1>
-        <em>Ha 4K videókat szeretnél látni békákról kattints <a target=blank
-                href="https://www.youtube.com/watch?v=IFqur0_e87c">
-                IDE</em>
-        </a>
-        <h2>A képre kattintva megtudhatsz többet a rajta lévő békáról</h2>
+<body>
+    <a href="/index.html">Kezdőlap</a>
+    <a id="bekak" href="/allatokbogyonak/allatok/beka.html">Békák</a>
+    <a id="pandak" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
+    <h1 id="bekainfo">Itt békákat fogsz találni a későbbiekben</h1>
+    <p id="bekavideo">Ha 4K videókat szeretnél látni békákról kattints <a target=blank
+            href="https://www.youtube.com/watch?v=IFqur0_e87c">
+            IDE</p>
+    </a>
+    <h2>A képre kattintva megtudhatsz többet a rajta lévő békáról</h2>
 
-        <table>
+    <table>
 
-            <caption>
-                <h3>Békák veszélyesség szerint</h3>
-            </caption>
+        <caption>
+            <h3>Békák veszélyesség szerint</h3>
+        </caption>
 
-            <tr>
-                <td><font color="red">Piros</font></td>
-                <td><font color="red">Veszélyes</font></td>
-            </tr>
-            <tr>
-                <td><font color="orange">Narancssárga</font></td>
-                <td><font color="orange">Kevésbé veszélyes</font></td>
-            </tr>
-            <tr>
-                <td><font color="ambientgreen">Zöld</font></td>
-                <td><font color="ambientgreen">Ártalmatlan</font></td>
-            </tr>
+        <tr>
+            <td>Piros</td>
+            <td>Veszélyes</td>
+        </tr>
+        <tr>
+            <td>Narancssárga</td>
+            <td>Kevésbé veszélyes</td>
+        </tr>
+        <tr>
+            <td>Zöld</td>
+            <td>Ártalmatlan</td>
+        </tr>
 
 
 
@@ -57,39 +53,39 @@
 
 
 
-        </table>
+    </table>
 
 
-        <p>
-        <h3 style="color: rgb(0, 162, 255);">Otthon tartható békák</h3>
-        </p>
+    <p>
+    <h3>Otthon tartható békák</h3>
+    </p>
 
 
-        <a target=blank href="https://hu.wikipedia.org/wiki/Z%C3%B6ld_levelib%C3%A9ka"><img width=640 height=400
-                src="kicsibeka1.jpg" alt="kicsi1"></a>
+    <a target=blank href="https://hu.wikipedia.org/wiki/Z%C3%B6ld_levelib%C3%A9ka"><img width=640 height=400
+            src=kicsibeka1.jpg alt=kicsi1></a>
 
-        <p><a target=blank href="https://hu.wikipedia.org/wiki/Mocs%C3%A1ri_b%C3%A9ka"><img width=640 height=400
-                    src="kicsibeka2.jpg" alt="kicsi2"></a>
-        </p>
-
-
-
-
-        <p>
-        <h3 style="color: rgb(124, 23, 182);">Nem háziasítható békák</h3>
-        </p>
-
-
-        <a target=blank href="https://hu.wikipedia.org/wiki/Ny%C3%ADlm%C3%A9regb%C3%A9kaf%C3%A9l%C3%A9k"><img width=640
-                height=400 src="nyilmereg.jpg" alt="nagy1"></a>
-
-        <p> <a target=blank href="https://hu.wikipedia.org/wiki/V%C3%B6r%C3%B6sszem%C5%B1_levelib%C3%A9ka"><img width=640
-                    height=400 src="leveli.jpg" alt="nagy1"></a>
-        </p>
+    <p><a target=blank href="https://hu.wikipedia.org/wiki/Mocs%C3%A1ri_b%C3%A9ka"><img width=640 height=400
+                src=kicsibeka2.jpg alt=kicsi2></a>
+    </p>
 
 
 
 
-    </body>
+    <p>
+    <h3>Nem háziasítható békák</h3>
+    </p>
 
-    </html>
+
+    <a target=blank href="https://hu.wikipedia.org/wiki/Ny%C3%ADlm%C3%A9regb%C3%A9kaf%C3%A9l%C3%A9k"><img width=640
+            height=400 src=nyilmereg.jpg alt=nagy1></a>
+
+    <p> <a target=blank href="https://hu.wikipedia.org/wiki/V%C3%B6r%C3%B6sszem%C5%B1_levelib%C3%A9ka"><img width=640
+                height=400 src=leveli.jpg alt=nagy1></a>
+    </p>
+
+
+
+
+</body>
+
+</html>
