--- a/allatokbogyonak/allatok/panda.html
+++ b/allatokbogyonak/allatok/panda.html
@@ -5,23 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
-    <style>
-        html {
-            font-family: sans-serif;
-        }
-    </style>
-</head>
+    <link rel="stylesheet" type="text/css" href="/css/allatstyle.css">
+
+    </head>
 
 <body>
-    <a style="color: rgb(55, 3, 243); font-weight: 700; " href="/index.html">Kezdőlap</a>
-    <a style="color: rgb(185, 208, 42); font-weight: 700;" href="/allatokbogyonak/allatok/beka.html">Békák</a>
-    <a style="color: rgb(210, 68, 61); font-weight: 700;" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
-    <h1 style="color: rgb(210, 68, 61); text-align: center;">Itt pandákat fogsz találni a későbbiekben</h1>
+    <a href="/index.html">Kezdőlap</a>
+    <a id="bekak" href="/allatokbogyonak/allatok/beka.html">Békák</a>
+    <a id="pandak" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
+    <h1 id="pandainfo">Itt pandákat fogsz találni a későbbiekben</h1>
 
 
 
-    <em>Ha cuki pandás videókat szeretnél nézni kattints <a target=blank
-            href="https://www.youtube.com/watch?v=TYM2597Hmgk">IDE</a></em>
+    <p id="pandavideo">Ha cuki pandás videókat szeretnél nézni kattints <a target=blank
+            href="https://www.youtube.com/watch?v=TYM2597Hmgk">IDE</a></p>
     <p>
     <h2>A képekre kattintva többet megtudhatsz az adott panda fajtáról</h2>
     </p>
