--- a/index.html
+++ b/index.html
@@ -5,15 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuki állatok</title>
-    <style>
-        html {
-            font-family: sans-serif;
-        }
+    <link rel="stylesheet" type="text/css" href="/css/allatstyle.css">
 
-        p {
-            line-height: 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -21,13 +14,13 @@
     <ul>
         <p>
 
-            <a style="color: rgb(185, 208, 42); font-weight: 700 ;" href="allatokbogyonak\allatok\beka.html">Békák</a>
+            <a id="bekak" href="allatokbogyonak\allatok\beka.html">Békák</a>
 
         </p>
 
         <p>
 
-            <a style="color: rgb(210, 68, 61); font-weight: 700 ;" href="allatokbogyonak\allatok\panda.html">Pandák</a>
+            <a id="pandak" href="allatokbogyonak\allatok\panda.html">Pandák</a>
 
         </p>
     </ul>
