--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -23,20 +23,20 @@
     <table>
 
         <caption>
-            <h3>Békák veszélyesség szerint</h3>
+            <h3 id="alahuz">Békák veszélyesség szerint</h3>
         </caption>
 
         <tr>
-            <td>Piros</td>
-            <td>Veszélyes</td>
+            <td id="piros">Piros</td>
+            <td id="piros">Veszélyes</td>
         </tr>
         <tr>
-            <td>Narancssárga</td>
-            <td>Kevésbé veszélyes</td>
+            <td id="orange">Narancssárga</td>
+            <td id="orange">Kevésbé veszélyes</td>
         </tr>
         <tr>
-            <td>Zöld</td>
-            <td>Ártalmatlan</td>
+            <td id="green">Zöld</td>
+            <td id="green">Ártalmatlan</td>
         </tr>
 
 
