--- a/allatokbogyonak/allatok/beka.html
+++ b/allatokbogyonak/allatok/beka.html
@@ -6,10 +6,12 @@
     <meta name=viewport content=wirth=revice-wirth, initial-scale=1.0>
     <title>Békakirályság</title>
     <link rel=stylesheet type=text/css href=/css/allatstyle.css>
+    <link rel=stylesheet type=text/css href=/css/pagebg.css>
 
 </head>
 
-<body>
+<body id="frogpagebg">
+    
     <a href="/index.html">Kezdőlap</a>
     <a id="bekak" href="/allatokbogyonak/allatok/beka.html">Békák</a>
     <a id="pandak" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
