--- a/allatokbogyonak/allatok/panda.html
+++ b/allatokbogyonak/allatok/panda.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
     <link rel="stylesheet" type="text/css" href="/css/allatstyle.css">
-
+    <link rel=stylesheet type=text/css href=/css/pagebg.css>
     </head>
 
-<body>
+<body id="pandapagebg">
     <a href="/index.html">Kezdőlap</a>
     <a id="bekak" href="/allatokbogyonak/allatok/beka.html">Békák</a>
     <a id="pandak" href="/allatokbogyonak/allatok/panda.html">Pandák</a>
