--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuki állatok</title>
     <link rel="stylesheet" type="text/css" href="/css/allatstyle.css">
-
+    <link rel=stylesheet type=text/css href=/css/pagebg.css>
 </head>
 
-<body>
+<body id="mainpagebg">
+  
     <h1 style="text-align: center;">Üdv az állatnézegetőben!</h1>
     <ul>
         <p>
 
-            <a id="bekak" href="allatokbogyonak\allatok\beka.html">Békák</a>
+            <a class="szalag" id="bekak" href="allatokbogyonak\allatok\beka.html">Békák</a>
 
         </p>
 
         <p>
 
-            <a id="pandak" href="allatokbogyonak\allatok\panda.html">Pandák</a>
+            <a class="szalag" id="pandak" href="allatokbogyonak\allatok\panda.html">Pandák</a>
 
         </p>
     </ul>
