--- a/html/index.html
+++ b/html/index.html
@@ -7,10 +7,72 @@
     <link rel="stylesheet" href="../css/page.css" />
     <link rel="stylesheet" href="../css/text.css" />
   </head>
+
   <body class="bgcolor">
-    <h1 class="headrow">Üdv az állatok nézgetőjében!</h1>
-    <p><a class="pagenavigator" href="index.html">Kezdőlap</a></p>
-    <p><a class="pagenavigator" href="frog.html">Békák</a></p>
-    <p><a class="pagenavigator" href="lizard.html">Gyíkok</a></p>
+
+    <div class="setstatic">
+      <ul class="headrowposition">
+        <li>
+          <div class="homebutton">
+            <h1>Üdv az állatok nézgetőjében!</h1>
+          </div>
+        </li>
+      </ul>
+    </div>
+       
+      <div class="setstatic2">
+      <p>
+      <ul class="ulnavstyle">
+        <li>
+          <a class="navbuttons" href="index.html">Kezdőlap</a>
+        </li>
+        <li>
+          <a class="navbuttons" href="frog.html">Békák</a>
+        </li>
+        <li>
+          <a class="navbuttons" href="lizard.html">Gyíkok</a>
+        </li>
+      </ul>
+    </p>
+    </div>
+
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+   
+    
   </body>
 </html>
