--- a/html/lizard.html
+++ b/html/lizard.html
@@ -9,9 +9,66 @@
   </head>
 
   <body class="bgcolor">
-    <h1 class="headrow">Gyíkok világa</h1>
-    <p><a class="pagenavigator" href="index.html">Kezdőlap</a></p>
-    <p><a class="pagenavigator" href="frog.html">Békák</a></p>
-    <p><a class="pagenavigator" href="lizard.html">Gyíkok</a></p>
+
+    <div class="setstatic"><ul class="headrowposition">
+      <li>
+        <h1 class="homebutton">Üdv az állatok nézgetőjében!</h1>
+      </li>
+    </ul>
+  </div>
+     
+    <div class="setstatic2">
+    <p>
+    <ul class="ulnavstyle">
+      <li>
+        <a class="navbuttons" href="index.html">Kezdőlap</a>
+      </li>
+      <li>
+        <a class="navbuttons" href="frog.html">Békák</a>
+      </li>
+      <li>
+        <a class="navbuttons" href="lizard.html">Gyíkok</a>
+      </li>
+    </ul>
+  </p>
+  </div>
+
+  <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+     <p>a</p>
+    
   </body>
 </html>
