--- a/lizard.html
+++ b/lizard.html
@@ -10,14 +10,14 @@
 
   <body class="bgcolor">
 
-    <div class="setstatic"><ul class="headrowposition">
+    <div class="setstaticheadrow"><ul class="headrowposition">
       <li>
-        <h1 class="homebutton">Üdv az állatok nézgetőjében!</h1>
+        <h1>Üdv az állatok nézgetőjében!</h1>
       </li>
     </ul>
   </div>
      
-    <div class="setstatic2">
+  <div class="setstaticnav">
     <p>
     <ul class="ulnavstyle">
       <li>
@@ -28,7 +28,16 @@
       </li>
       <li>
         <a class="navbuttons" href="lizard.html">Gyíkok</a>
+      </li> 
+      <li>
+        <a class="navbuttons" href="dog.html">Kutyák</a>
       </li>
+      <li>
+        <a class="navbuttons" href="snake.html">Kígyók</a>
+      </li>
+      <li>
+        <a class="navbuttons" href="bird.html">Madarak</a>
+      </li> 
     </ul>
   </p>
   </div>
