--- a/index.html
+++ b/index.html
@@ -20,64 +20,30 @@
   <div class="setstaticnav">
     <p>
     <ul class="ulnavstyle">
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="index.html">Kezdőlap</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="frog.html">Békák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="lizard.html">Gyíkok</a>
       </li> 
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="dog.html">Kutyák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="snake.html">Kígyók</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="bird.html">Madarak</a>
       </li> 
     </ul>
   </p>
   </div>
+  
 
-  <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
+  
     
   </body>
 </html>
