--- a/lizard.html
+++ b/lizard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gyíkok</title>
+    <title>Állatok nézegetője</title>
     <link rel="stylesheet" href="../css/page.css" />
     <link rel="stylesheet" href="../css/text.css" />
   </head>
@@ -20,64 +20,44 @@
   <div class="setstaticnav">
     <p>
     <ul class="ulnavstyle">
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="index.html">Kezdőlap</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="frog.html">Békák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="lizard.html">Gyíkok</a>
       </li> 
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="dog.html">Kutyák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="snake.html">Kígyók</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="bird.html">Madarak</a>
       </li> 
     </ul>
   </p>
   </div>
-
-  <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-     <p>a</p>
-    
+  <img class="imgfrog" src="img/l1.jpg">
+  <img class="imgfrog" src="img/l2.jpg">
+  <img class="imgfrog" src="img/l3.jpg">
+  <img class="imgfrog" src="img/l4.jpg">
+  <img class="imgfrog" src="img/l5.jpg">
+  <img class="imgfrog" src="img/l6.jpg">
+  <img class="imgfrog" src="img/l7.jpg">
+  <img class="imgfrog" src="img/l8.jpg">
+  <img class="imgfrog" src="img/l9.jpg">
+  <img class="imgfrog" src="img/l10.jpg">
+  <img class="imgfrog" src="img/l11.jpg">
+  <img class="imgfrog" src="img/l12.jpg">
+  <img class="imgfrog" src="img/l13.jpg">
+  <img class="imgfrog" src="img/l14.jpg">
+  <img class="imgfrog" src="img/l15.jpg">
+  <img class="imgfrog" src="img/l16.jpg">
+  <img class="imgfrog" src="img/l17.jpg">
+  <img class="imgfrog" src="img/l18.jpg">
   </body>
 </html>
