--- a/snake.html
+++ b/snake.html
@@ -3,82 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kígyók</title>
+    <title>Állatok nézegetője</title>
     <link rel="stylesheet" href="../css/page.css" />
     <link rel="stylesheet" href="../css/text.css" />
   </head>
 
   <body class="bgcolor">
 
-    <div class="setstaticheadrow">
-      <ul class="headrowposition">
+    <div class="setstaticheadrow"><ul class="headrowposition">
       <li>
         <h1>Üdv az állatok nézgetőjében!</h1>
       </li>
     </ul>
   </div>
      
-    <div class="setstaticnav">
+  <div class="setstaticnav">
     <p>
     <ul class="ulnavstyle">
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="index.html">Kezdőlap</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="frog.html">Békák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="lizard.html">Gyíkok</a>
       </li> 
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="dog.html">Kutyák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="snake.html">Kígyók</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="bird.html">Madarak</a>
       </li> 
     </ul>
   </p>
   </div>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
 
+  
     
   </body>
 </html>
