--- a/frog.html
+++ b/frog.html
@@ -3,82 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Békák</title>
+    <title>Állatok nézegetője</title>
     <link rel="stylesheet" href="../css/page.css" />
     <link rel="stylesheet" href="../css/text.css" />
   </head>
 
   <body class="bgcolor">
 
-    <div class="setstaticheadrow">
-      <ul class="headrowposition">
-      <li>
+    <div class="setstaticheadrow"><ul class="headrowposition">
+      <li class="zindex">
         <h1>Üdv az állatok nézgetőjében!</h1>
       </li>
     </ul>
   </div>
      
-    <div class="setstaticnav">
+  <div class="setstaticnav">
     <p>
     <ul class="ulnavstyle">
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="index.html">Kezdőlap</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="frog.html">Békák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="lizard.html">Gyíkok</a>
       </li> 
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="dog.html">Kutyák</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="snake.html">Kígyók</a>
       </li>
-      <li>
+      <li class="linavstyle">
         <a class="navbuttons" href="bird.html">Madarak</a>
       </li> 
     </ul>
   </p>
   </div>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-  <p>a</p>
-
+  
+    <img class="imgfrog" src="img/barnavarangy.jpg">
+    <img class="imgfrog" src="img/zoldvarangy.jpg">
+    <img class="imgfrog" src="img/nyilmereg.jpg">
+    <img class="imgfrog" src="img/b1.jpeg">
+    <img class="imgfrog" src="img/vorosunka.jpg">
+    <img class="imgfrog" src="img/kicsibeka1.jpg">
+    <img class="imgfrog" src="img/nagybeka.jpg">
+    <img class="imgfrog" src="img/b2.jpg">
+    <img class="imgfrog" src="img/b3.jpg">
+    <img class="imgfrog" src="img/b4.jpg">
+    <img class="imgfrog" src="img/b5.jpg">
+    <img class="imgfrog" src="img/b1.jpeg">
+    <img class="imgfrog" src="img/b6.jpg">
+    <img class="imgfrog" src="img/b8.jpg">
+    <img class="imgfrog" src="img/b7.jpg">
+    <img class="imgfrog" src="img/b2.jpg">
+    <img class="imgfrog" src="img/b9.jpg">
+    <img class="imgfrog" src="img/b10.jpg">
+  
+  
     
   </body>
 </html>
