--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Állatok nézegetője</title>
     <link rel="stylesheet" href="../css/page.css" />
     <link rel="stylesheet" href="../css/text.css" />
-    
+    <link rel="stylesheet" href="../css/megrendelőadatai.css" />
+    <link rel="stylesheet" href="../css/rendeléstípus.css" />
   </head>
 
 
@@ -48,6 +49,206 @@
     </ul>
   </p>
   </div>
+  <div class="rendelés"><div class="megrendelőadatai">
+    <form>
+      <div class="személyesadatok">
+        <legend><h3>Személyes adatok</h3></legend>
+      </div>
+      <div class="input-fields">
+        <input type="text" class="input" placeholder="Név*" required />
+        <input type="text" class="input" placeholder="Email*" required />
+        <input
+          type="text"
+          class="input"
+          placeholder="Telefonszám*"
+          required
+        />
+        <input type="text" class="input" placeholder="Város*" required />
+        <input
+          type="text"
+          class="input"
+          placeholder="Irányítószám*"
+          required
+        />
+        <input type="text" class="input" placeholder="Utca*" required />
+        <input type="text" class="input" placeholder="Házszám*" required />
+      </div>
+      <div>
+        <textarea
+          class="megjegyzés"
+          placeholder="Megjegyzés"
+          cols="40"
+          rows="5"
+        ></textarea>
+        <div class="button">Megrendel</div>
+      </div>
+    </form>
+  </div>
+ 
+  <div class="választás">
+    <form>
+      <div class="rendelésnaptár">
+        <legend class="fejléc">Kiválasztott naptár</legend>
+        <div>
+          <input
+            class="tartalom"
+            id="béka"
+            name="naptár"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="béka">Béka</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="gyík"
+            name="naptár"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="gyík">Gyík</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="kutya"
+            name="naptár"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="kutya">Kutya</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="kígyó"
+            name="naptár"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="kígyó">Kígyó</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="madár"
+            name="naptár"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="madár">Madár</label>
+        </div>
+      </div>
+      <div class="rendelésstílus">
+        <legend class="fejléc">Kiválasztott stílus</legend>
+        <div>
+          <input
+            class="tartalom"
+            id="béka2"
+            name="naptár2"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="béka2">1</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="gyík2"
+            name="naptár2"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="gyík2">2</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="kutya2"
+            name="naptár2"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="kutya2">3</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="kígyó2"
+            name="naptár2"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="kígyó2">4</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="madár2"
+            name="naptár2"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="madár2">5</label>
+        </div>
+      </div>
+      <div class="kiválasztottméret">
+        <legend class="fejléc2">Kiválasztott méret</legend>
+        <div>
+          <input
+            class="tartalom"
+            id="béka3"
+            name="naptár3"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="béka3">Extra kicsi (15x25cm)</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="gyík3"
+            name="naptár3"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="gyík3">Kicsi (25x40cm)</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="kutya3"
+            name="naptár3"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="kutya3">Közepes (32x52cm)</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="kígyó3"
+            name="naptár3"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="kígyó3">Nagy (45x60cm)</label>
+        </div>
+        <div>
+          <input
+            class="tartalom"
+            id="madár3"
+            name="naptár3"
+            type="radio"
+            required
+          />
+          <label class="tartalom2" for="madár3">Extra nagy (70x90cm)</label>
+        </div>
+      </div>
+    </form>
+  </div></div>
+  
   
 
   
