--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     </ul>
   </p>
   </div>
-  <div class="rendelés"><div class="megrendelőadatai">
+  
+    <div class="megrendelőadatai">
     <form>
       <div class="személyesadatok">
         <legend><h3>Személyes adatok</h3></legend>
@@ -247,7 +248,7 @@
         </div>
       </div>
     </form>
-  </div></div>
+  </div>
   
   
 
