--- a/rendeléstípus.html
+++ b/rendeléstípus.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/rendeléstípus.css" />
   </head>
   <body>
-    <div>
+    <div class="helyezés">
       <form>
         <div class="rendelésnaptár">
           <legend class="fejléc">Kiválasztott naptár</legend>
