--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MI</title>
     <link href="style.css" rel="stylesheet" />
+
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="flexbox-container">
       <div class="flexbox-item flexbox-item-1">
         <ul>
-          <li>
-            <a>Home</a>
-          </li>
+          <li><span class="material-icons"> home </span><a>Home</a></li>
         </ul>
       </div>
       <div class="flexbox-item flexbox-item-2">
         <ul>
           <li>
+            <span class="material-icons">
+              group
+            </span>
             <a>About us</a>
             <ul>
               <li><a>Tündi</a></li>
@@ -29,6 +35,9 @@
       <div class="flexbox-item flexbox-item-3">
         <ul>
           <li>
+            <span class="material-icons">
+              call_split
+            </span>
             <a>Goals</a>
             <ul>
               <li><a>Tündi's goals</a></li>
@@ -40,6 +49,9 @@
       <div class="flexbox-item flexbox-item-4">
         <ul>
           <li>
+            <span class="material-icons">
+              landscape
+            </span>
             <a>Places we have been</a>
 
             <ul>
@@ -67,7 +79,11 @@
       </div>
       <div class="flexbox-item flexbox-item-5">
         <ul>
-          <li><a>Funny moments</a></li>
+          <li>
+            <span class="material-icons">
+              contacts </span
+            ><a>Contact</a>
+          </li>
         </ul>
       </div>
     </div>
