--- a/index2.html
+++ b/index2.html
@@ -9,8 +9,9 @@
     
   </head>
   <body>
-    <div class="flexbox-container">
-      <div class="flexbox-item left-item"><div>
+    <div class="main-flexbox-container">
+      <div class="main-flexbox-item left-item">
+          <div>
         <p>
         <ul class="ulnavstyleleft">
           <li class="linavstyleleft">
@@ -38,14 +39,7 @@
       </p>
       </div>
     </div>
-      <div class="flexbox-item middle-item">
-
-      </div>
+      <div class="main-flexbox-item middle-item"></div>
    </div>
   </body>
 </html>
-
-  
-   
-  
-    
