--- a/lizard.html
+++ b/lizard.html
@@ -4,61 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Állatok nézegetője</title>
-    <link rel="stylesheet" href="../css/page.css" />
-    <link rel="stylesheet" href="../css/text.css" />
+    <link rel="stylesheet" href="css/page2.css" />
+    <link rel="stylesheet" href="css/index2left.css" />
+    
   </head>
-
-  <body class="bgcolor">
-
-
-    <div class="setstaticheadrow"><ul class="headrowposition">
-      <li>
-        <h1>Üdv az állatok nézgetőjében!</h1>
-      </li>
-    </ul>
-  </div>
-     
-  <div class="setstaticnav">
-    <p>
-    <ul class="ulnavstyle">
-      <li class="linavstyle">
-        <a class="navbuttons" href="index.html">Kezdőlap</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="frog.html">Békák</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="lizard.html">Gyíkok</a>
-      </li> 
-      <li class="linavstyle">
-        <a class="navbuttons" href="dog.html">Kutyák</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="snake.html">Kígyók</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="bird.html">Madarak</a>
-      </li> 
-    </ul>
-  </p>
-  </div>
-  <img class="imgfrog" src="img/l1.jpg">
-  <img class="imgfrog" src="img/l2.jpg">
-  <img class="imgfrog" src="img/l3.jpg">
-  <img class="imgfrog" src="img/l4.jpg">
-  <img class="imgfrog" src="img/l5.jpg">
-  <img class="imgfrog" src="img/l6.jpg">
-  <img class="imgfrog" src="img/l7.jpg">
-  <img class="imgfrog" src="img/l8.jpg">
-  <img class="imgfrog" src="img/l9.jpg">
-  <img class="imgfrog" src="img/l10.jpg">
-  <img class="imgfrog" src="img/l11.jpg">
-  <img class="imgfrog" src="img/l12.jpg">
-  <img class="imgfrog" src="img/l13.jpg">
-  <img class="imgfrog" src="img/l14.jpg">
-  <img class="imgfrog" src="img/l15.jpg">
-  <img class="imgfrog" src="img/l16.jpg">
-  <img class="imgfrog" src="img/l17.jpg">
-  <img class="imgfrog" src="img/l18.jpg">
+  <body>
+    <div class="flexbox-container">
+      <div class="flexbox-item left-item"><div>
+        <p>
+        <ul class="ulnavstyleleft">
+          <li class="linavstyleleft">
+            <a class="navbuttonsleft" href="index2.html">Kezdőlap</a>
+          </li>
+          <li class="linavstyleleft">
+            <a class="navbuttonsleft" href="frog.html">Békák</a>
+          </li>
+          <li class="linavstyleleft">
+            <a class="navbuttonsleft" href="lizard.html">Gyíkok</a>
+          </li> 
+          <li class="linavstyleleft">
+            <a class="navbuttonsleft" href="dog.html">Kutyák</a>
+          </li>
+          <li class="linavstyleleft">
+            <a class="navbuttonsleft" href="snake.html">Kígyók</a>
+          </li>
+          <li class="linavstyleleft">
+            <a class="navbuttonsleft" href="bird.html">Madarak</a>
+            </li>
+            <li class="linavstyleleft">
+                <a class="navbuttonsleft" href="calendarorder.html">Naptár rendelés</a>
+                </li>
+        </ul>
+      </p>
+      </div>
+    </div>
+      <div class="flexbox-item middle-item"></div>
+   </div>
   </body>
 </html>
+
