--- a/index.html
+++ b/index.html
@@ -3,256 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Állatok nézegetője</title>
-    <link rel="stylesheet" href="../css/page.css" />
-    <link rel="stylesheet" href="../css/text.css" />
-    <link rel="stylesheet" href="../css/megrendelőadatai.css" />
-    <link rel="stylesheet" href="../css/rendeléstípus.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="../style.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
-
-
-  <body class="bgcolor">
-
-
-
-
-
-<div class="setstaticheadrow"><ul class="headrowposition">
-      <li>
-        <h1>Üdv az állatok nézgetőjében! </h1>
-      </li>
-    </ul>
-  </div>
-     
-
-  <div class="setstaticnav">
-    <p>
-    <ul class="ulnavstyle">
-      <li class="linavstyle">
-        <a class="navbuttons" href="index.html">Kezdőlap</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="frog.html">Békák</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="lizard.html">Gyíkok</a>
-      </li> 
-      <li class="linavstyle">
-        <a class="navbuttons" href="dog.html">Kutyák</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="snake.html">Kígyók</a>
-      </li>
-      <li class="linavstyle">
-        <a class="navbuttons" href="bird.html">Madarak</a>
-      </li> 
-    </ul>
-  </p>
-  </div>
-  
-    <div class="megrendelőadatai">
-    <form>
-      <div class="személyesadatok">
-        <legend><h3>Személyes adatok</h3></legend>
-      </div>
-      <div class="input-fields">
-        <input type="text" class="input" placeholder="Név*" required />
-        <input type="text" class="input" placeholder="Email*" required />
-        <input
-          type="text"
-          class="input"
-          placeholder="Telefonszám*"
-          required
-        />
-        <input type="text" class="input" placeholder="Város*" required />
-        <input
-          type="text"
-          class="input"
-          placeholder="Irányítószám*"
-          required
-        />
-        <input type="text" class="input" placeholder="Utca*" required />
-        <input type="text" class="input" placeholder="Házszám*" required />
-      </div>
-      <div>
-        <textarea
-          class="megjegyzés"
-          placeholder="Megjegyzés"
-          cols="40"
-          rows="5"
-        ></textarea>
-        <div class="button">Megrendel</div>
-      </div>
-    </form>
-  </div>
- 
-  <div class="választás">
-    <form>
-      <div class="rendelésnaptár">
-        <legend class="fejléc">Kiválasztott naptár</legend>
-        <div>
-          <input
-            class="tartalom"
-            id="béka"
-            name="naptár"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="béka">Béka</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="gyík"
-            name="naptár"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="gyík">Gyík</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="kutya"
-            name="naptár"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="kutya">Kutya</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="kígyó"
-            name="naptár"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="kígyó">Kígyó</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="madár"
-            name="naptár"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="madár">Madár</label>
-        </div>
-      </div>
-      <div class="rendelésstílus">
-        <legend class="fejléc">Kiválasztott stílus</legend>
-        <div>
-          <input
-            class="tartalom"
-            id="béka2"
-            name="naptár2"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="béka2">1</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="gyík2"
-            name="naptár2"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="gyík2">2</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="kutya2"
-            name="naptár2"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="kutya2">3</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="kígyó2"
-            name="naptár2"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="kígyó2">4</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="madár2"
-            name="naptár2"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="madár2">5</label>
-        </div>
-      </div>
-      <div class="kiválasztottméret">
-        <legend class="fejléc2">Kiválasztott méret</legend>
-        <div>
-          <input
-            class="tartalom"
-            id="béka3"
-            name="naptár3"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="béka3">Extra kicsi (15x25cm)</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="gyík3"
-            name="naptár3"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="gyík3">Kicsi (25x40cm)</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="kutya3"
-            name="naptár3"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="kutya3">Közepes (32x52cm)</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="kígyó3"
-            name="naptár3"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="kígyó3">Nagy (45x60cm)</label>
-        </div>
-        <div>
-          <input
-            class="tartalom"
-            id="madár3"
-            name="naptár3"
-            type="radio"
-            required
-          />
-          <label class="tartalom2" for="madár3">Extra nagy (70x90cm)</label>
-        </div>
-      </div>
-    </form>
-  </div>
-  
-  
-
-  
-    
+  <body>
+    <nav>
+      <input type="checkbox" id="check" />
+      <label for="check" class="checkbtn"> <i class="fas fa-bars"></i></label>
+      <ul>
+        <li>
+          <a class="navbuttons" href="index.html">Kezdőlap</a>
+        </li>
+        <li>
+          <a href="frog.html">Békák</a>
+        </li>
+        <li>
+          <a href="lizard.html">Gyíkok</a>
+        </li>
+        <li>
+          <a href="dog.html">Kutyák</a>
+        </li>
+        <li>
+          <a href="snake.html">Kígyók</a>
+        </li>
+        <li>
+          <a href="bird.html">Madarak</a>
+        </li>
+        <li>
+          <a href="calendarorder.html">Naptár rendelés</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
