--- a/lizard.html
+++ b/lizard.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../lizard.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -35,5 +40,30 @@
         </li>
       </ul>
     </nav>
+    <div class="lizardpic">
+      <img class="lizardpictures" src="img/l1.jpg" alt="l1.jpg" />
+      <img class="lizardpictures" src="img/l2.jpg" alt="l2.jpg" />
+      <img class="lizardpictures" src="img/l3.jpg" alt="l3.jpg" />
+      <img class="lizardpictures" src="img/l4.jpg" alt="l4.jpg" />
+      <img class="lizardpictures" src="img/l5.jpg" alt="l5.jpg" />
+      <img class="lizardpictures" src="img/l6.jpg" alt="l6.jpg" />
+      <img class="lizardpictures" src="img/l7.jpg" alt="l7.jpg" />
+      <img class="lizardpictures" src="img/l8.jpg" alt="l8.jpg" />
+      <img class="lizardpictures" src="img/l9.jpg" alt="l9.jpg" />
+      <img class="lizardpictures" src="img/l10.jpg" alt="l10.jpg" />
+      <img class="lizardpictures" src="img/l11.jpg" alt="l11.jpg" />
+      <img class="lizardpictures" src="img/l12.jpg" alt="l12.jpg" />
+      <img class="lizardpictures" src="img/l13.jpg" alt="l13.jpg" />
+      <img class="lizardpictures" src="img/l14.jpg" alt="l14.jpg" />
+      <img class="lizardpictures" src="img/l15.jpg" alt="l15.jpg" />
+      <img class="lizardpictures" src="img/l16.jpg" alt="l16.jpg" />
+      <img class="lizardpictures" src="img/l17.jpg" alt="l17.jpg" />
+      <img class="lizardpictures" src="img/l18.jpg" alt="l18.jpg" />
+    </div>
+    <footer>
+      <a title="Ugrás a lap tetejére" href="#top">
+        <i class="material-icons md-48">arrow_upward</i>
+      </a>
+    </footer>
   </body>
 </html>
