--- a/lizard.html
+++ b/lizard.html
@@ -40,7 +40,7 @@
         </li>
       </ul>
     </nav>
-    <div class="lizardpic">
+    <div id="lizardpic">
       <img class="lizardpictures" src="img/l1.jpg" alt="l1.jpg" />
       <img class="lizardpictures" src="img/l2.jpg" alt="l2.jpg" />
       <img class="lizardpictures" src="img/l3.jpg" alt="l3.jpg" />
